--- a/resume.template
+++ b/resume.template
@@ -16,7 +16,7 @@
     </style>
   </head>
   <body>
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-xs-12">
           <div id="photo-header" class="text-center">
